# canary

./: .gitignore  .harnessignore  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY_CHECKLIST.md  README.md  STRATEGY.md  action.yml  canary.spec  harness.config.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude-plugin/agents/: oracle-migrator.md  oracle-test-generator.md
.claude-plugin/commands/: oracle-pick-framework.md  oracle-write-test.md
.claude-plugin/hooks/: block-no-verify.py  pre-compact-state.py  quality-gate.py
.githooks/: pre-commit
.github/workflows/: advance-latest-tag.yml  arch-snapshot.yml  docs-lint.yml  guardian.yml  harness-architecture.yml  harness-quality.yml  harness-security.yml  harness.yml  oracle-commit-test.yml  oracle-generate.yml  refresh-arch-baseline.yml  release.yml  validate-plugin.yml  wiki-sync.yml
.harness/: .gitignore
.harness/arch/: baselines.json
.harness/hooks/: format-check.js  package.json  prefer-first-party-mcp.js  quality-warner.js  sentinel-post.js  sentinel-pre.js  telemetry-reporter.js  untrusted-source.js
.harness/knowledge/: gaps.md
.harness/security/: timeline.json
.oracle/: last_generation.json
agent/: cli.py  mcp_server.py
agent/analysis/: __init__.py  cli.py  engine.py  reports.py
agent/core/: ci_env.py  classifier.py  code_extractor.py  company_knowledge.py  config_validation.py  detection.py  domain_scanner.py  env_setup.py  env_writer.py  environment_detect.py  executor.py  feedback.py  fixture_scanner.py  framework_registry.py  mcp_validator.py  metadata_scanner.py  migrator.py  orchestrator.py  overlays.py  pattern_healer.py  pattern_matcher.py  provider_ping.py  quality_scorer.py  recommender.py  reporter.py  scaffolder.py  selector_healer.py  setup.py  skill_registry.py  static_linter.py  ticket_updater.py  workflow_discovery.py
agent/frameworks/: registry.json
agent/guardian/: __init__.py  agent_tier.py  analysis_emit.py  cli.py  coverage.py  delta_emitter.py  diff_extractor.py  impact_mapper.py  pr_check.py  pr_comment.py  summary_emitter.py  tier.py
agent/history/: __init__.py  cli.py  detector.py  local_store.py  schema.py  store.py  supabase_store.py
agent/llm/: __init__.py  client.py  factory.py
agent/ui/: banner.py
agents/: canary-flake-hunter.md  canary-framework-advisor.md  canary-initializer.md  canary-migrator.md  canary-test-author.md  canary-test-generator.md  canary-test-healer.md  canary-test-reviewer.md  oracle-initializer.md  oracle-test-author.md  oracle-test-generator.md  oracle-test-healer.md  oracle-test-reviewer.md
agents/skills/: README.md  canary:generate.md  (+9 more)
commands/: canary-ci-ready.md  canary-critical-areas.md  canary-debug-flake.md  canary-edge-cases.md  canary-failure-impact.md  canary-heal-test.md  canary-init.md  canary-migrate.md  canary-pick-framework.md  canary-pr-guardian.md  canary-review-test.md  canary-test-pipeline.md  canary-write-test.md  oracle-heal-test.md
docs/: CANARY_LEARNINGS.md  CANARY_STATE.md  ORACLE_LEARNINGS.md  ORACLE_ROADMAP.md  ORACLE_STATE.md  SECURITY_LEDGER.md  roadmap-archive.md  roadmap.md
examples/: README.md
hooks/: _harness_dedup.py  block-no-verify.py  check-proprietary.py  guardian_precommit.py  pre-compact-state.py  protect-config.py  quality-gate.py
npm/: .npmignore  package-lock.json  package.json  tsconfig.json
scripts/: capture_analysis_golden.py  capture_core_golden.py  capture_scanner_golden.py  check_hook_customizations.py  check_removed_symbols.py  check_version_sync.py  extract_python_docstrings.py  read_ts_written_history.py  roadmap_comment_guard.py  security_ledger.py
ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
voice/: discovery.md
(+495 files in other folders)
