[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-test-ai"
version = "5.4.0"
description = "AI-powered test automation agent"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13.7,<16",
    "fastmcp>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
history = ["supabase>=2.0,<3"]
dev = [
    "pyinstaller>=6,<7",
]

[project.scripts]
canary = "agent.cli:app"
canary-mcp = "agent.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agent*"]
exclude = ["agents*", "tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"agent" = ["frameworks/*.json"]
