[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-test-ai"
version = "5.9.0"
description = "AI-powered test automation agent"
license = { text = "MIT" }
authors = [{ name = "Bri Stevenski", email = "b.stevenski.eng@pm.me" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13.7,<16",
    "fastmcp>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
history = ["supabase>=2.0,<3"]
dev = [
    "pyinstaller>=6,<7",
    "ruff>=0.15,<1",
]

[project.scripts]
canary = "agent.cli:app"
canary-mcp = "agent.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agent*"]
exclude = ["agents*", "tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"agent" = ["frameworks/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]  # ruff default set
ignore = ["E402"]  # deferred/conditional imports are intentional (path setup, optional deps)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # intentional re-exports

