[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-test-ai"
version = "5.13.0"
description = "AI-powered test automation agent"
license = { text = "MIT" }
authors = [{ name = "Bri Stevenski", email = "b.stevenski.eng@pm.me" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13.7,<16",
    "fastmcp>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
history = ["supabase>=2.0,<3"]
dev = [
    "pyinstaller>=6,<7",
    "ruff>=0.15,<1",
    "pytest>=8,<9",
    "coverage>=7,<8",
]

[project.scripts]
canary = "agent.cli:app"
canary-mcp = "agent.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agent*"]
exclude = ["agents*", "tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"agent" = ["frameworks/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]  # ruff default set
ignore = ["E402"]  # deferred/conditional imports are intentional (path setup, optional deps)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # intentional re-exports

# --------------------------------------------------------------------------
# Coverage gate (#382 follow-up). Enforces a line-coverage floor on the Python
# engine (agent/) in CI. This is a RATCHET: the floor is set just under the
# current measured coverage so it passes today and blocks regressions, and is
# bumped upward as coverage improves. Target: 90% (tracked in a follow-up).
# Measure locally with: coverage run -m pytest tests/unit && coverage report
# --------------------------------------------------------------------------
[tool.coverage.run]
source = ["agent"]

[tool.coverage.report]
precision = 2
show_missing = true
# Current floor ~81.67%. Ratcheting toward 90 — bump this as tests land.
fail_under = 81

